button align fixing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -419,6 +419,7 @@
 
     .stories-btn {
         padding: 11px 14px;
+        left: 10px;
     }
 
     .footer-container {
